--- a/Aula04/exercicios/exercicio03.html
+++ b/Aula04/exercicios/exercicio03.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     
+    <script>
+        for (let i = 1; i <= 10; i++) {
+        console.log(i);
+
+        }
+
+
+
+    </script>
 </body>
 </html>
